package com.wirc.entity;

import jakarta.persistence.EmbeddedId;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.MapsId;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;

@Entity
@Table(name = "chat_room_member")
@Getter
@NoArgsConstructor
public class ChatRoomMemberEntity {

    @EmbeddedId
    private ChatRoomMemberId id;

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @MapsId("roomId")
    @JoinColumn(name = "room_id", nullable = false)
    private ChatRoomEntity room;

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @MapsId("username")
    @JoinColumn(name = "username", nullable = false)
    private AppUserEntity user;

    public ChatRoomMemberEntity(ChatRoomEntity room, AppUserEntity user) {
        this.id = new ChatRoomMemberId(room.getId(), user.getUsername());
        this.room = room;
        this.user = user;
    }
}
